--- a/app/static/style.css
+++ b/app/static/style.css
@@ -92,7 +92,6 @@ h3 {
 .form-control-lg {
     margin-top: 23px;
     padding: 14px;
-    font-size: 2.75em;
 }
 
 .drop {
@@ -161,9 +160,9 @@ h3 {
 }
 
 #card {
-    width: 66vw;
-    height: 66vh;
-    background-color: white;
+    width: 36vw;
+    height: 36vh;
+    background-color: black;
     border-radius: 8px;
     display: none;
     font-size: 34px;
