--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>PROLO</title>
+    <title>Prolo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/style.css">
+   <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
+
+
 
 </head>
 <body>
@@ -20,5 +22,6 @@
     </nav>
     {% block my_block %}
     {% endblock %}
+<script src="https://kit.fontawesome.com/0026184341.js" crossorigin="anonymous"></script>
 </body>
 </html>
