--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,8 +20,11 @@
             <li class="push">contact us</a></li>
         </ul>
     </nav>
+    <div class="cover">
+
     {% block my_block %}
     {% endblock %}
+    </div>
 <script src="https://kit.fontawesome.com/0026184341.js" crossorigin="anonymous"></script>
 </body>
 </html>
