--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,11 +2,10 @@
 
 {% block my_block %}
 
-    <div class="cover">
         <h3><span> welcome to prolo!<br></span>
                     all you need to do is to fill the details,<br>
                     and you will get your business card ready <br>
-                    for you in a second </h3>
-    </div>
-    <a class="push btn btn-primary" href="{{ url_for('create_card') }}">create your card now</a>
+                    for you in a second  <br>
+        <a class="btn btn-primary" href="{{ url_for('create_card') }}">create your card now</a> </h3>
+
 {% endblock %}
