--- a/app/templates/card.html
+++ b/app/templates/card.html
@@ -4,21 +4,24 @@
 
 <h3> Here is your beautiful card: </h3>
 
-<div class="card">
-   <div id="left">
-        <h2>  {{ card.name }} </h2><br>
-        <hr class="hr">
-        <h2> {{ card.category }} </h2><br><br><br><br><br><br><br><br>
-        <h3> {{ card.sentence }} </h3>
+          <div class="box" >
+             <div class="left">
+                <h2>  {{ card.name }} </h2><br>
+                <hr class="hr">
+                <h2> {{ card.category }} </h2><br><br><br><br><br><br><br>
+                <h4> {{ card.sentence }} </h4>
+             </div>
+             <div class="right">
+                 <i class="fa-solid fa-link fa-1x">&nbsp; <p> {{ card.website }} </p><br><br></i>
+                 <i class="fa-solid fa-at fa-1x">&nbsp; <p> {{ card.email }} </p><br><br></i>
+                 <i class="fa-brands fa-facebook fa-1x">&nbsp; <p> {{ card.facebook }} </p><br><br></i>
+                 <i class="fa-solid fa-location-dot fa-1x"></i>&nbsp; <p> {{ card.address }} </p><br><br> </i>
+                 <i class="fa-solid fa-phone fa-1x"></i>&nbsp; <p> {{ card.phone }} </p></i>
+              </div>
 
-   <div id="right">
-      <i class="fa-solid fa-link fa-1x">&nbsp;&nbsp; <p> {{ card.website }} </p><br></i>
-        <p> {{ card.facebook }} </p><br>
-        <p> {{ card.address }} </p><br>
-        <p> {{ card.phone }} </p><br>
-       <p> {{ card.email }} </p>
 
-   </div>
-</div>
+          </div>
+
+
 
 {% endblock %}
